# YoutubeDownloaderServer

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: deploy.yml
migrations/: 0001_create_users.sql
src/: auth.rs  config.rs  db.rs  error.rs  lib.rs  main.rs  middleware.rs  router.rs  state.rs  youtube.rs
src/routes/: admin.rs  auth.rs  health.rs  mod.rs  stream.rs
tests/: integration.rs
