[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
argon2 = "0.5.3"
axum = { version = "0.8.8", features = ["macros"] }
chrono = { version = "0.4.38", features = ["serde"] }
dotenvy = "0.15.7"
envy = "0.4.2"
jsonwebtoken = { version = "10.3.0", features = ["aws_lc_rs"] }
rand = "0.8.5"
bytes = "1"
futures = "0.3"
tokio-stream = "0.1"
reqwest = { version = "0.13.2", features = ["stream"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.3", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "migrate"] }
thiserror = "2.0.12"
tokio = { version = "1.50.0", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.8", features = ["trace", "cors", "request-id", "timeout"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt"] }
utoipa = { version = "5.4.0", features = ["axum_extras", "chrono", "uuid"] }
utoipa-axum = "0.2.0"
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
uuid = { version = "1.11.0", features = ["v4", "serde"] }
yt-dlp = "2.4.0"

[features]
test-helpers = []

[dev-dependencies]
testcontainers = "0.27.0"
testcontainers-modules = { version = "0.15.0", features = ["postgres"] }
tokio = { version = "1.50.0", features = ["full"] }
serde_json = "1.0.149"
tower = { version = "0.5.2", features = ["util"] }

[[test]]
name = "integration"
required-features = ["test-helpers"]
